[package]
name = "nametable_codegen"
version = "0.1.0"
authors = ["CrLF0710 <crlf0710@gmail.com>"]
description = "Code generation for generating and managing lots of string literals. Use this together with nametable."
repository = "http://github.com/crlf0710/nametable"
license = "MIT"

[lib]
name = "nametable_codegen"
path = "src/lib.rs"
plugin = true

[dependencies]
nametable = "*"
syntex = "*"
syntex_syntax = "*"