[package]
name = "nametable_codegen"
version = "0.1.0"
authors = ["CrLF0710 <crlf0710@gmail.com>"]
description = "Code generation for generating and managing lots of string literals. Use this together with nametable."
repository = "http://github.com/crlf0710/nametable"
license = "MIT"
build = "build.rs"

[lib]
name = "nametable_codegen"
path = "src/lib.rs"

[features]
default = ["with-syntex"]
with-syntex = ["quasi/with-syntex", "quasi_codegen", "quasi_codegen/with-syntex", "syntex", "syntex_syntax"]

[dependencies]
nametable = "*"
syntex = {version = "*", optional = true}
syntex_syntax = {version = "*", optional = true}
quasi = {version = "*", optional = true}

[build-dependencies]
quasi_codegen = {version = "*", optional = true}
syntex = {version = "*", optional = true}
