[package]
name = "nametable_codegen"
version = "0.1.1"
authors = ["CrLF0710 <crlf0710@gmail.com>"]
description = "Code generation for generating and managing lots of string literals. Use this together with nametable."
repository = "http://github.com/crlf0710/nametable"
license = "MIT"
build = "build.rs"

[lib]
name = "nametable_codegen"
path = "src/lib.rs"

[features]
default = ["with-syntex"]
with-syntex = ["quasi/with-syntex", "quasi_codegen", "quasi_codegen/with-syntex", "syntex", "syntex_syntax"]

[dependencies]
nametable = "0.1.0"
syntex = {version = "0.31.0", optional = true}
syntex_syntax = {version = "0.31.0", optional = true}
quasi = {version = "0.9.0", optional = true}

[build-dependencies]
quasi_codegen = {version = "0.9.0", optional = true}
syntex = {version = "0.31.0", optional = true}
