[package]
name = "nametable_codegen_tests"
version = "0.1.0"
authors = ["CrLF0710 <crlf0710@gmail.com>"]
build = "build.rs"

[dependencies]
nametable = { path = "../nametable"}

[build-dependencies]
syntex = "0.57.0"
syntex_syntax = "0.57.0"
nametable_codegen = { path = "../nametable_codegen"}

[[test]]
name = "test"
path = "tests/tests.rs"